# FYP_20200387

./: README.md  ddddd.js
Backend/: manage.py  pyproject.toml
Backend/datasets/: AllFloodDamagesRepeat - ratnapura.csv  Flood_DF.csv  Thunder_Rathnapura.csv
Backend/mlModels/: LandSlide.joblib  Landslide_Damage_Improved.joblib  Landslide_Damage_Improved_New.joblib  Strongwind new.joblib  Strongwind.joblib  ThunderDamage.joblib  ThunderDamageKNN.joblib  WindDamage (4).joblib  WindDamage (5).joblib  floodModel.joblib  floodPrediction.py  floodPredictionModel.joblib  impactAssessment.joblib  impactAssessment.py  thunderModel.joblib  thunderPrediction.py  thunderPredictionModel.joblib
Backend/planetpulse/: asgi.py  settings.py  urls.py  wsgi.py
Backend/planetpulseapp/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
Backend/planetpulseapp/migrations/: 0001_initial.py  0002_blogs.py  0003_complaints_alter_blogs_content.py  0004_flood_remove_complaints_authority_and_more.py  0005_floodimpact.py  0006_guidance.py  0007_userdetails.py  0008_alter_userdetails_telephonenumber.py  0009_userdetailssetup_delete_userdetails.py  0010_webnotification.py  0011_remove_webnotification_user_webnotification_owner.py  0012_webappnotification_delete_webnotification.py  0013_alter_webappnotification_owner.py  0014_disasternotification_delete_webappnotification.py  0015_emergencyaction.py  0023_post.py  (+22 more)
Backend/planetwatch/: asgi.py  settings.py  urls.py  wsgi.py
Backend/planetwatchapp/: apps.py  models.py  scheduling.py  serializers.py  tests.py  urls.py  views.py
(+94 files in other folders)
