[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yashodhara Pitawela"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.0.0"
drf-yasg = "^1.21.5"
djangorestframework-simplejwt = "^5.2.2"
statsmodels = "^0.14.0"
imbalanced-learn = "^0.11.0"
celery = "^5.3.1"
django-celery-beat = "^2.5.0"
django-notifications-hq = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
